--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,5 @@
 @import "../../vendor/pd-scss/pd-scss.scss";
-@import "../../vendor/navvi/navvi.scss";
+@import "../../vendor/navvi/scss/navvi.scss";
 @import "./prism.scss";
 
 
